src/LuckyDraw V1.0/src/objects/sfcma__Subscription__c.object
<CustomObject>
    <description>Contains information about the customer&apos;s history and usage of an offering. For example, when the subscription started.</description>
    <fields>
        <fullName>sfcma__ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__AmountDiscountedByCoupon__c</fullName>
        <description>The amount discounted by coupon if discount coupon of type dollar comes with subscription.</description>
        <label>Amount Discounted By Coupon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcma__BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__Charge__c</fullName>
        <description>Charge per license</description>
        <label>Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcma__CouponDiscountType__c</fullName>
        <description>The type of discount a coupon applies to the subscription.</description>
        <label>Coupon Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dollars</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__Coupon_Lifespan__c</fullName>
        <description>The lifespan of the coupon applied to the subscription.</description>
        <label>Coupon Lifespan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Forever</fullName>
                </value>
                <value>
                    <fullName>Limited Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__Coupon__c</fullName>
        <label>Coupon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__CurrentBillingReminderSent__c</fullName>
        <formula>IF( ISBLANK(sfcma__LastBillingReminder__c), false,
/* In short - have we already sent a reminder this period (which could be monthly or annually */
sfcma__LastBillingReminder__c &gt;= sfcma__CurrentPeriodBeginsAt__c &amp;&amp; sfcma__LastBillingReminder__c &lt;= sfcma__CurrentPeriodEndsAt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Period Billing Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__CurrentPeriodBeginsAt__c</fullName>
        <label>Current Period Begins At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__CurrentPeriodEndsAt__c</fullName>
        <label>Current Period Ends At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>sfcma__Customer__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfcma__Email__c</fullName>
        <inlineHelpText>This field is controlled by the associated customer record. Do not manually edit.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sfcma__ExpirationDate__c</fullName>
        <description>Date the subscription expires</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__Frequency__c</fullName>
        <description>Frequency of the Checkout Subscription&apos;s plan.</description>
        <formula>TEXT(sfcma__SubscriptionPlan__r.sfcma__Frequency__c)</formula>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__IsChargeVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether VAT Percentage should be charged.</description>
        <label>Charge VAT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__LastBillingReminder__c</fullName>
        <label>Last Billing Renewal Reminder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__LastTrialEndingReminder__c</fullName>
        <label>Last Free Trial Ending Reminder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__LicenseAccountName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__LicenseType__c</fullName>
        <description>Indicates whether the license is based on the company or the user.</description>
        <formula>IF(sfcma__License__r.sfLma__Licensed_Seats__c == &apos;-1&apos;, &apos;Company&apos;, &apos;User&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LMA License subscription corresponds to</description>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcma__ListingId__c</fullName>
        <label>Listing Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__ListingName__c</fullName>
        <label>Listing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__NumberOfTimesCouponApplies__c</fullName>
        <description>If the coupon has limited life span the no of times the coupon applies to the subscription.</description>
        <label>Number of Times Coupon Applies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcma__NumberOfUnits__c</fullName>
        <description>Number of licenses the customer has purchased</description>
        <label>Number Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcma__PackageId__c</fullName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__PercentDiscountedByCoupon__c</fullName>
        <description>Percent to be discounted from subtotal of the subscription if a discount coupon of type percent comes with the subscription.</description>
        <label>Percent Discounted by Coupon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>sfcma__SendLicenseCountChangedNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendLicenseCountChangedNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__SendSeatsExceededNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendSeatsExceededNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>PastDue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__StripeCustomerId__c</fullName>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__StripeSubscriptionIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Subscription Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfcma__StripeSubscriptionId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Subscription Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Subscriber__c</fullName>
        <formula>sfcma__License__r.sfLma__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__SubscriptionPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Plan</label>
        <referenceTo>sfcma__SubscriptionPlan__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcma__TotalAmount__c</fullName>
        <description>Total amount for the subscription</description>
        <formula>IF(  TEXT(sfcma__CouponDiscountType__c) = &apos;percent&apos;,
     (  sfcma__Charge__c  -  (  sfcma__Charge__c  *  sfcma__PercentDiscountedByCoupon__c  )  )  *  sfcma__NumberOfUnits__c ,
        (sfcma__Charge__c * (IF(sfcma__NumberOfUnits__c=0, 1, sfcma__NumberOfUnits__c) ) - sfcma__AmountDiscountedByCoupon__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcma__TrialEndsAt__c</fullName>
        <label>Trial Ends At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__TrialLengthInDays__c</fullName>
        <formula>sfcma__TrialEndsAt__c - sfcma__TrialStartedAt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Length In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcma__TrialStartedAt__c</fullName>
        <label>Trial Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__VATNumber__c</fullName>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__VATPercentage__c</fullName>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Checkout Subscription</label>
    <listViews>
        <fullName>sfcma__All</fullName>
        <columns>NAME</columns>
        <columns>sfcma__Customer__c</columns>
        <columns>sfcma__IsChargeVAT__c</columns>
        <columns>sfcma__ListingId__c</columns>
        <columns>sfcma__VATNumber__c</columns>
        <columns>sfcma__VATPercentage__c</columns>
        <columns>sfcma__ShippingCountry__c</columns>
        <columns>sfcma__BillingCountry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{000000}</displayFormat>
        <label>Checkout Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>